@@ -23,6 +23,7 @@
 - make negative cache update consistent for all lookup modules.
 - ensure negative cache isn't updated on remount.
 - dont add wildcard to negative cache.
+- add a prefix to program map stdvars.
 
 28/03/2014 autofs-5.0.9
 =======================
